# scht

./: .gitignore  docker-compose.yml
.github/workflows/: [backend]-heroku-deploy.yml  [feature]-push.yml
airflow/: Dockerfile  pyproject.toml
airflow/dags/: mariadb_to_bq.py  migrate_data.py
api/: Dockerfile  pyproject.toml  start.sh
api/src/: main.py
backend/: Dockerfile  pyproject.toml  server-local.sh  server-prod.sh
backend/api/: start.sh
backend/src/: main.py
backend/src/modules/case/: router.py
backend/src/modules/customer/: router.py
backend/src/modules/invoice/: router.py
backend/src/modules/users/: router.py
etl/: Dockerfile  etl_pyspark.py  pyproject.toml
