[tool.poetry]
name = "pyspark-exam"
version = "0.1.0"
description = ""
authors = ["axelSchouten <axel.schouten@chargeguru.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pyspark = "^3.5.1"
requests = "^2.31.0"

[tool.poetry.group.dev.dependencies]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
